--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 body{
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 1fr 5fr;
     min-height: 100vh;
 }
 .sidebar img{
@@ -41,7 +41,7 @@ body{
     display: grid;
     padding: 20px;
     gap: 10px;
-    grid-template-rows: 1fr 3fr 1fr ;
+    grid-template-rows: 0.2fr 0.5fr 1fr ;
 }
 
 .item p{
@@ -106,4 +106,41 @@ input{
     margin: 10px;
     padding: 10px 20px;
     border-radius: 25px;
+}
+.content>div{
+    border: 2px solid black;
+}
+.content{
+    display: grid;
+    grid-template-columns: 2.5fr 1fr;
+    gap: 10px;
+}
+.projects{
+    grid-row: 1/3;
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+}
+h3{
+    grid-column: 1/3;
+    padding: 20px 0 0 20px;
+
+}
+.icons img{
+    width: 20px;
+}
+
+.project-card{
+    background-color: white;
+    border-left: 8px solid rgb(226, 181, 75);
+    border-radius: 10px;
+    display: grid;
+    padding: 20px;
+    gap: 30px;
+    margin: 20px;
+    box-shadow: 2px 2px 5px 1px rgba(128, 128, 128, 0.377);
+}
+.icons{
+    display: flex;
+    justify-content: end;
+    gap: 20px;
 }
