--- a/style.css
+++ b/style.css
@@ -107,12 +107,11 @@ input{
     padding: 10px 20px;
     border-radius: 25px;
 }
-.content>div{
-    border: 2px solid black;
-}
+
 .content{
     display: grid;
     grid-template-columns: 2.5fr 1fr;
+    grid-template-rows:1fr 1fr ;
     gap: 10px;
 }
 .projects{
@@ -120,15 +119,14 @@ input{
     display: grid;
     grid-template-columns: 1fr 1fr; 
 }
-h3{
+.projects>h3{
     grid-column: 1/3;
-    padding: 20px 0 0 20px;
-
+    padding: 20px 0 0 10px;
+    /* margin-bottom: 20px; */
 }
 .icons img{
     width: 20px;
 }
-
 .project-card{
     background-color: white;
     border-left: 8px solid rgb(226, 181, 75);
@@ -143,4 +141,43 @@ h3{
     display: flex;
     justify-content: end;
     gap: 20px;
+}
+.ann-card{
+    /* margin-top: 10px; */
+    background-color: white;
+    border-radius: 8px;
+    display: grid;
+    box-shadow: 2px 2px 5px 1px rgba(128, 128, 128, 0.377);
+    margin-right: 10px;
+    padding: 20px;
+}
+.announcements h3{
+    padding:20px 0 16px 0 ;
+    /* margin-bottom: 20px; */
+}
+hr{
+    width: 90%;
+    justify-self: center;
+    color: grey;
+    background-color: grey;
+    margin: 10px;
+}
+
+.content p{
+    color: grey;
+}
+.person{
+    display: flex;
+    gap: 10px;
+}
+.trend-card{
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 5px 1px rgba(128, 128, 128, 0.377);
+    display: grid;
+    gap: 20px;
+}
+.trending h3{
+    padding: 10px 0px;
 }
